welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:7: error: type mismatch;
 found   : Unit
 required: Boolean
    return
    ^lessBy10:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if (C==a||A==b){
  ^