welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  var A:Int=a-10
  var B:Int=b-10
  var C:Int=c-10
  
  if (C==a||A==b){
    return
  }
  
}